yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-java-demo
  namespace: java-demo-ns
spec:
  selector:
    project: www
    app: java-demo
  ports:
  - name: web
    port: 80
    targetPort: 8080
#  type: NodePort
